--- a/SPA/src/App.css
+++ b/SPA/src/App.css
@@ -9,12 +9,6 @@ body {
   height: 100vh;
 }
 
-body {
- 
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
 
 *,
 *::before,
@@ -72,37 +66,8 @@ body {
   }
 } 
 
-
-
-/* footer {
-  width: 100%;
-  display: flex;
-  font-size: 1.5rem;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 0;
-  padding: 0rem 5rem 0 3rem;
-  margin: 0%;
-  padding-top: 18px;
-}
-footer a:hover {
-  font-weight: normal;
-  background-color: rgba(129, 115, 115, 0.466);
-}
-
 footer {
-  position: fixed;
-  opacity: 0.8;
-  bottom: 0;
-  height: 40px;
-  font-size: 20px;
-  width: 100%;
-  color: rgb(114, 108, 108);
-  padding: 0.7em 1em;
-} */
-nav,
-footer {
-    background: rgba(0, 17, 54, 0.85);
+    
     width: 100%;
     display: flex;
     font-size: 1.5rem;
@@ -114,32 +79,6 @@ footer {
     padding-top: 18px;
 }
 
-a {
-    text-decoration: none;
-}
-
-nav ul {
-    margin: 0 0 0 auto;
-}
-
-nav ul li {
-    display: inline-block;
-    margin: 0 0.5em;
-}
-
-nav h1 {
-    color: white;
-}
-
-nav a {
-    text-decoration: none;
-    border-radius: 50%;
-    padding: 0.5em;
-    color: white;
-    text-transform: uppercase;
-}
-
-nav a:hover,
 footer a:hover {
     font-weight: normal;
     background-color: rgba(129, 115, 115, 0.466);
@@ -179,3 +118,36 @@ footer {
   height: auto;
 }
 
+@media (max-height:800px) {
+  html {
+      font-size: 12px;
+  }
+  header {
+      margin-top: 0.5em;
+  }
+  section {
+      margin: 1rem 3em;
+  }
+  footer {
+      display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .theaters-container {
+      flex-wrap: wrap;
+      overflow-x: initial;
+  }
+  html {
+      font-size: 12px;
+  }
+  header {
+      margin-top: 0.5em;
+  }
+  section {
+      margin: 1rem 3em;
+  }
+  footer {
+      display: none;
+  }
+}
