--- a/SPA/src/components/Details/Details.module.css
+++ b/SPA/src/components/Details/Details.module.css
@@ -2,6 +2,7 @@
 .body{
     background-image: url('../../../public/static/images/hand2.jpg');
     /* background: linear-gradient(#282152,#5b4cb1); */
+    display: flow-root;
     margin-top: -5rem;
     background-repeat: no-repeat;
     background-size: cover;
@@ -58,44 +59,44 @@
 
 .text h1,
 .btn p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .text h2 {
     margin: 8px 0 47px 18px;
     font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* text-transform: uppercase; */
     color: #282152;
-    letter-spacing: 0.3em;
+    letter-spacing: 0.1em;
     margin-bottom: 0;
 }
 
 .text h4 {
     margin: 8px 0 10px 18px;
     font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    /* text-transform: uppercase; */
     color: #282152;
-    letter-spacing: 0.3em;
+    letter-spacing: 0.1em;
 }
 
 .text h4 {
     margin: 8px 0 10px 18px;
     font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* text-transform: uppercase; */
     color: #282152;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
 }
 
 .text h5 {
     margin: 25px 0 10px 18px;
     font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* text-transform: uppercase; */
     color: #282152;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
 }
 
 .text>p {
@@ -132,7 +133,7 @@
     padding: 10px;
 
     justify-content: space-around;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
     font-weight: 600;
     text-transform: uppercase;
