--- a/SPA/src/components/Edit/Edit.module.css
+++ b/SPA/src/components/Edit/Edit.module.css
@@ -9,6 +9,7 @@
 .body {
     background-image: url('../../../public/static/images/hand2.jpg');
     /* background: linear-gradient(#282152,#5b4cb1); */
+    display: flow-root;
     margin-top: -5rem;
     background-repeat: no-repeat;
     background-size: cover;
@@ -129,7 +130,7 @@ input {
     transition: .25s ease;
 }
 
-.input-field {
+.inputField{
     border: 0;
     z-index: 1;
     background-color: transparent;
@@ -139,8 +140,8 @@ input {
     padding: .25rem 0;
 }
 
-.input-field:focus,
-.input-field:valid {
+.inputField:focus,
+.inputField:valid {
     outline: 0;
     border-bottom-color: #6658d3;
 }
