--- a/SPA/src/components/Header/Header.module.css
+++ b/SPA/src/components/Header/Header.module.css
@@ -1,43 +1,44 @@
-/* .nav{
-  /* background: #282152; */
-  /* width: 100%;
-  display: flex;
-  font-size: 1.5rem;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 0;
-  padding: 0rem 5rem 0 3rem;
-  margin: 0%;
-  padding-top: 18px;
+.navigation{
+    
+    width: 100%;
+    display: flex;
+    font-size: 1.5rem;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 0;
+    padding: 0rem 5rem 0 3rem;
+    margin: 0%;
+    padding-top: 18px;
 }
 
-.links {
-  text-decoration: none;
+.navigation a {
+    text-decoration: none;
 }
 
-.nav >ul {
-  margin: 0 0 0 auto;
+.navigation ul {
+    margin: 0 0 0 auto;
 }
 
-.nav>ul>li {
-  display: inline-block;
-  margin: 0 0.5em;
+.navigation ul li {
+    display: inline-block;
+    margin: 0 0.5em;
 }
 
-.nav>h1 {
-  color: white;
+.navigation h1 {
+    color: white;
 }
 
-.links {
-  text-decoration: none;
-  border-radius: 50%;
-  padding: 0.5em;
-  color: white;
-  text-transform: uppercase;
+.navigation a {
+    text-decoration: none;
+    border-radius: 50%;
+    padding: 0.5em;
+    color: white;
+    text-transform: uppercase;
 }
 
-.links:hover
+.navigation a:hover
 {
-  font-weight: normal;
-  background-color: rgba(129, 115, 115, 0.466);
-} */ 
+    font-weight: normal;
+    background-color: rgba(129, 115, 115, 0.466);
+}
+
