--- a/SPA/src/components/items/FormItems.module.css
+++ b/SPA/src/components/items/FormItems.module.css
@@ -1,7 +1,7 @@
-input {
+/* input {
     appearance: none;
     border-radius: 0;
-}
+} */
 
 .input {
     display: flex;
@@ -20,7 +20,7 @@ input {
     transition: .25s ease;
 }
 
-.input-field {
+.inputField {
     border: 0;
     z-index: 1;
     background-color: transparent;
@@ -30,8 +30,9 @@ input {
     padding: .25rem 0;
 }
 
-.input-field:focus,
-.input-field:valid {
+.inputField:focus,
+.inputField:valid {
+    background-color: transparent;
     outline: 0;
     border-bottom-color: #6658d3;
 }
@@ -40,7 +41,7 @@ input {
     color: #282152;;
     transform: translateY(-1.5rem);
 }
-.input-field {
+.inputField {
     border: 0;
     z-index: 1;
     background-color: transparent;
@@ -49,3 +50,8 @@ input {
     font-size: 1.5rem;
     padding: .25rem 0;
 }
+/* height: 40px;
+    border: none;
+    border-radius: 6px;
+    font-size: larger;
+} */
