--- a/SPA/src/components/Register/Register.module.css
+++ b/SPA/src/components/Register/Register.module.css
@@ -23,14 +23,18 @@ img {
 .boxs {
     margin: 10rem auto;
     display: flex;
+    border-radius: 0.1em;
+    box-shadow: 0px 0px 16px rgb(253, 253, 253);
     flex-direction: column;
     width: 100%;
-    max-width: 550px;
-    border-radius: 7px 7px 7px 7px;
-    box-shadow: 0px 0px 3px 10px white;
+    max-width: 450px;
     padding: .55rem;
     background: rgb(173, 168, 168);
 }
+.boxs:hover{
+    box-shadow: 0px 0px 80px rgb(253, 253, 253);
+}
+
 
 .image {
     border-radius: 9px;
@@ -73,23 +77,28 @@ img {
 }
 
 .actionButton {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-transform: uppercase;
     font: inherit;
     font-size: 1.25rem;
     padding: 1em;
     width: 100%;
     font-weight: 500;
     background-color:#9591af;
-    border-radius: 6px;
+    border-radius: 0.1em;
     color: #FFF;
     border: 0;
+    box-shadow: 0px 0px 16px #282152;
 }
 
 .actionButton:focus {
     outline: 0;
 }
 
-.actionButton:hover {background-color: #282152;
+.actionButton:hover {
+    
+    cursor: pointer;
+    background-color: #282152;
 }
 
 .cardInfo {
