--- a/SPA/src/components/Catalog/Catalog.module.css
+++ b/SPA/src/components/Catalog/Catalog.module.css
@@ -1,8 +1,9 @@
 .body{
-    /* background-image: url('../../../public/static/images/hand.jpg'); */
+    /* background-image: url('../../../public/static/images/hand2.jpg'); */
     /* background-repeat: no-repeat;
     background-size: cover;
     margin-top: -5rem; */
+    background-color: #d1d0d8;
     
 }
 .aboutContainer{
@@ -21,7 +22,7 @@
 }
 .body>h1{
     font-family: Arial, Helvetica, sans-serif;
-    color: rgba(42, 42, 46, 0.85);
+    color:#282152;
   position: relative;
     
     font-size: 53px;
@@ -49,9 +50,10 @@
     text-align: center;
     justify-content: space-evenly;
     width: 100%;
+    padding: 30px;
 }
 .noData>p{
     display: flex;
-   color: black
+   color:#282152;
 }
 
