--- a/SPA/src/components/Details/Details.module.css
+++ b/SPA/src/components/Details/Details.module.css
@@ -15,8 +15,8 @@
     
     width:80vw;
     margin: 140px auto;
-    border-radius: 7px 7px 7px 7px;
-    box-shadow: 0px 0px 3px 10px white;
+    border-radius: 0.1em;
+    box-shadow: 0px 0px 16px rgb(253, 253, 253);
 }
 @media only screen and (max-width: 600px) {
     .wrapper {
