--- a/SPA/src/components/Home/Home.module.css
+++ b/SPA/src/components/Home/Home.module.css
@@ -69,7 +69,7 @@
     width: 100%;
     text-align: center;
     font-family: 'Raleway', sans-serif;
-    color: rgba(42, 42, 46, 0.85);
+    color:#282152;
 }
 
 .houses {
