--- a/SPA/src/components/Search/Search.module.css
+++ b/SPA/src/components/Search/Search.module.css
@@ -4,6 +4,7 @@
     margin-top: -5rem;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flow-root;
 }
 .cardHome {
     background: white;
