--- a/SPA/src/components/createCenter/CreateCenter.module.css
+++ b/SPA/src/components/createCenter/CreateCenter.module.css
@@ -16,15 +16,18 @@
 
 
 .boxs {
-    margin: 5rem auto;
+    margin: 10rem auto;
     display: flex;
+    border-radius: 0.1em;
+    box-shadow: 0px 0px 16px rgb(253, 253, 253);
     flex-direction: column;
     width: 100%;
-    max-width: 550px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 40px 0px;
+    max-width: 450px;
     padding: .55rem;
     background: rgb(173, 168, 168);
+}
+.boxs:hover{
+    box-shadow: 0px 0px 80px rgb(253, 253, 253);
 }
 .boxHeading{
    
@@ -68,22 +71,27 @@
     padding: 2rem 1rem 0;
 }
 
-
-
 .action {
     margin-top: 0.6rem;
+    padding: 1em;
 }
 
 .actionButton {
+    cursor: pointer;
+   
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-transform: uppercase;
     font: inherit;
     font-size: 1.25rem;
     padding: 1em;
+    
     width: 100%;
     font-weight: 500;
-    background-color: #282152;;
-    border-radius: 6px;
+    background-color:#9591af;
+    border-radius: 0.1em;
     color: #FFF;
     border: 0;
+    box-shadow: 0px 0px 16px #282152;
 }
 
 .actionButton:focus {
@@ -91,7 +99,8 @@
 }
 
 .actionButton:hover {
-    background-color: rgba(129, 115, 115, 0.466);
+    cursor: pointer;
+    background-color: #282152;
 }
 
 .cardInfo {
