--- a/SPA/src/components/AboutPage/About.module.css
+++ b/SPA/src/components/AboutPage/About.module.css
@@ -1,11 +1,15 @@
+.body{
+
+}
 .backgroundImage{
     background: url('../../../public/static/images/aboutPage.jpg');
-    background-position: 40% 60%;
+    /* background-position: 20% 30%; */
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: local;
     /* padding: -10rem; */
     margin-top: -5rem;
+    margin-bottom: -5px;
 }
 .aboutContainer{
     margin: 0px auto 4px 0;
@@ -18,7 +22,7 @@
 }
 .info {
     
-    font-family: "Verdana";
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     justify-items: legacy;
     display: flex;
     flex-direction: column;
@@ -40,28 +44,25 @@
     
     color: rgb(127, 128, 129);
 }
-/* .info>p {
-    color: rgb(188, 193, 197);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    position: relative ;
-    margin-right: 1.5em;
-} */
+
 .links{
     color: rgb(17, 84, 207)
 }
 .paragraf{
-   
+   padding-top: 2rem;
     display:flex;
-    margin: -20px 20px 20px 20px
+    margin: -20px 50px 50px 20px;
+    
 }
-.paragraf>p{
-    font-family: Arial, Helvetica, sans-serif;
+.paragraf p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     position: relative;
-    font-size: 1.5rem;
-    font-weight:normal; 
+    font-size: 1.3rem;
+    font-weight:300; 
     color: black;
     text-align: center;
-    padding: 2rem
+    padding-top: 1rem;
+    /* padding-bottom: 10px; */
     
 
 }
