--- a/SPA/src/components/ProfilePage/ProfilePage.module.css
+++ b/SPA/src/components/ProfilePage/ProfilePage.module.css
@@ -5,11 +5,7 @@
     box-sizing: border-box;
 }
 
-/* 
-img {
-    max-width: 100%;
-    display: block;
-} */
+
 
 .body{
     background-image: url('../../../public/static/images/hand2.jpg');
@@ -25,7 +21,7 @@ img {
     height: 500px;
     max-width: 600px; 
     display: flex;
-    margin-top: 20px;
+    margin-top: 30px;
     margin: 140px auto;
     border-radius: 0.1em;
     box-shadow: 0px 0px 16px rgb(253, 253, 253);
@@ -42,24 +38,24 @@ img {
   
 
 .img {
-    margin-top: 25px;
+    background-image: url('../../../public/static/images/avatar.png');
+    background-repeat: no-repeat;
+    background-size:cover;
+    padding-left: 10px;
     float: left;
-    width:100%;
-    height:60%;
+    height:50%;
+    margin-right: 5px;
+    border-radius: 0.1em;
     flex:1;
   
 }
 
-.img img {
-    border-radius: 8em;
-    width:100%;
-   
-}
+
 .img h2{
     font-weight: 250;
     width:100%;
-    margin-top:3rem;
     text-align: center;
+    margin-top: 16rem;
   }
 
 .info {
@@ -75,14 +71,7 @@ img {
     width: 327px;
 }
 
-/* .text h1 {
-    margin: 0 0 0 17px;
-    padding-top: 52px;
-    font-size: 20px;
-    font-weight: 300;
-    color: #282152;;
-    
-} */
+
 
 .text h1,
 .btn p {
@@ -116,6 +105,7 @@ img {
 }
 
 .btn {
+    padding-top: 20px;
     text-align: center;
     margin-top:30px;
     position: relative;
@@ -129,9 +119,9 @@ img {
     height: auto;
     width: 80%;
     align-items: center;
-    padding: 10px;
+    padding: 5px;
     
-
+border-radius: 0.1em;
     justify-content: space-around;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
