--- a/SPA/src/components/createCenter/CreateCenter.module.css
+++ b/SPA/src/components/createCenter/CreateCenter.module.css
@@ -19,16 +19,16 @@
     margin: 10rem auto;
     display: flex;
     border-radius: 0.1em;
-    box-shadow: 0px 0px 16px rgb(253, 253, 253);
+    /* box-shadow: 0px 0px 16px rgb(253, 253, 253); */
     flex-direction: column;
     width: 100%;
     max-width: 450px;
     padding: .55rem;
-    background: rgb(173, 168, 168);
+    background: whitesmoke;
 }
-.boxs:hover{
+/* .boxs:hover{
     box-shadow: 0px 0px 80px rgb(253, 253, 253);
-}
+} */
 .boxHeading{
    
     display: flex;
