--- a/SPA/src/App.css
+++ b/SPA/src/App.css
@@ -48,7 +48,7 @@ body {
 
 
 
-@keyframes cssAnimation {
+/* @keyframes cssAnimation {
   to {
       width: 0;
       height: 0;
@@ -64,7 +64,7 @@ body {
       visibility: hidden;
       padding: 0;
   }
-} 
+}  */
 
 footer {
     
