--- a/SPA/src/components/items/FormItems.module.css
+++ b/SPA/src/components/items/FormItems.module.css
@@ -21,9 +21,11 @@
 
 .inputField:focus,
 .inputField:valid {
+  
     background-color: transparent;
     outline: 0;
-    border-bottom-color: #9591af;
+     border-bottom-color: #9591af; 
+   ;
 }
 
 .name {
@@ -31,5 +33,16 @@
     transform: translateY(-1.5rem);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1rem;
+}
+
+.invalidInput{
+   
+    z-index: 1;
+    background-color: transparent;
+    font: inherit;
+    font-size: 1.2rem;
+    padding: .25rem 0;
+    border: 1px solid;
+    border-color: red;
 }
 
