--- a/SPA/src/components/items/FormItems.module.css
+++ b/SPA/src/components/items/FormItems.module.css
@@ -34,15 +34,11 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1rem;
 }
-
-.invalidInput{
-   
-    z-index: 1;
-    background-color: transparent;
-    font: inherit;
-    font-size: 1.2rem;
-    padding: .25rem 0;
-    border: 1px solid;
-    border-color: red;
+.errors{
+    padding: 0rem
+}
+.alert{
+    color:red;
+    font-size:10px;
 }
 
