--- a/SPA/src/App.css
+++ b/SPA/src/App.css
@@ -8,6 +8,22 @@ body {
   position: relative;
   height: 100vh;
 }
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+*,
+*:after,
+*:before {
+    box-sizing: border-box;
+}
+
+
+.body {
+    background-image: url('../public/static/images/hand2.jpg');
+ 
+    display: flow-root;
+    margin-top: -5rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 
 *,
